static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');

* {
    font-family: Maven Pro, sans-serif;
}
html {
    width: 100vw;
    overflow-x:hidden;
}

body {
    background-color: #000;
}

header {
    background-color: #292b2c;
    border-bottom: 1px solid #FFCF74;
    
}

h4, h6, p {
    color: #fff;
}

span {
    color: #FFCF74;
}


li {
    font-size: 1.5rem;
    color: #FFCF74;
}

.nav-link:hover {
    color: white;
}

.nav-link {
    color: #fff;
}

a:hover {
    font-weight: 600;
}

a:active {
    text-shadow: -0.5px 0.5px black;
}

a, a:visited {
    color: inherit;
    text-decoration: none;
   }

form > label {
    color: #FFCF74;
}

/* Post List View */

.post-container {
    width: 50%;
    margin: 0 auto;
}

.post {
    background-color: #292b2c;
    border: 2px solid #FFCF74;
    border-radius: 2px;
}

.post:hover {
    
    background-color: #3e4041;
}

#post-info {
    font-size: 12px;
    font-style: italic;
}

#post-content {
    overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
}

.post-link:hover {
    font-weight: initial;
}

.post-link {
    
}

.errorlist {
    display:none;
}

.form-control:hover {
    border: 1px solid black;
}

.post-button {
    background-color:#363940;
    color:#fff;
    border: #FFCF74 solid 2px;
}

.comment-like-btn {
    background-color:#292b2c;
    color:#FFCF74;
    border:none;
  
}

.post-button:hover {
    color: #000;
    background-color:#FFCF74;
}


/* Single Post View */

.single-post {
    background-color: #3e4041;
    border: 2px solid #FFCF74;
    border-radius: 2px;
    border-bottom:1px dotted #FFCF74;
}

.post-options {
    
    background-color: #292b2c;
}

.comment-container {
    background-color: #292b2c;
    border-left: #FFCF74 solid 2px;
    border-right: #FFCF74 solid 2px;
}

.form-control {
    background-color: #3e4041;
}

.comment-color {
    background-color: #3e4041;
}

.comment-heading {
    text-decoration: underline;
}

.last-comment {
    border-bottom: #FFCF74 solid 2px;
}

